--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -38,7 +38,7 @@
             <ng-container matColumnDef="SubjectTypeId">
                 <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-form-field>
+                    <mat-form-field appearance="outline">
                         <mat-label>subject type</mat-label>
                         <mat-select (selectionChange)="updateSelectHowMany(element)" [value]="element.SubjectTypeId"
                             [(ngModel)]="element.SubjectTypeId">
@@ -51,7 +51,7 @@
             <ng-container matColumnDef="Credits">
                 <mat-header-cell *matHeaderCellDef> Credits </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-form-field>
+                    <mat-form-field appearance="outline">
                         <input matInput type="number" max="100" [value]="element.Credits" (blur)="onBlur(element)"
                             [(ngModel)]="element.Credits" autocomplete="Off">
                     </mat-form-field>
@@ -61,7 +61,7 @@
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Teacher
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    <mat-form-field [style.width.pc]="25">
+                    <mat-form-field  appearance="outline">
                         <mat-label>Teacher</mat-label>
                         <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId"
                             [value]="element.TeacherId">
@@ -96,7 +96,7 @@
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" style="display:flex;align-items: baseline;"></mat-row>
         </mat-table>
     </div>
 </div>
