--- a/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
+++ b/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
@@ -1,8 +1,8 @@
 <mat-card>
-    <mat-card-title>Attendance</mat-card-title>
+    <mat-card-title style="margin:20px">Attendance</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content>
-        <div style="margin:5px">
+    <mat-card-content style="margin:20px">
+        
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
                 <mat-tab *ngFor="let component of components;let indx=index">
                     <ng-template mat-tab-label>
@@ -13,6 +13,6 @@
                     </ng-template>
                 </mat-tab>
             </mat-tab-group>
-        </div>
+        
     </mat-card-content>
 </mat-card>
