--- a/src/app/modules/classes/classprerequisite/classprerequisite.component.html
+++ b/src/app/modules/classes/classprerequisite/classprerequisite.component.html
@@ -31,7 +31,7 @@
                     <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Pre-requisite
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="300">
+                        <mat-form-field appearance="outline">
                             <textarea matInput (blur)="onBlur(element)" [maxlength]="250" [value]="element.Description"
                                 [(ngModel)]="element.Description">
                         </textarea>
@@ -49,19 +49,19 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                        <button [disabled]="loading || IscurrentBatchSelect==0 || Permission=='deny'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab
+                        <button [disabled]="loading || !element.Action || IscurrentBatchSelect==0 || Permission=='deny'" matTooltip="save" mat-mini-fab
                             (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row">
+                <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;">
                 </mat-row>
             </mat-table>
         </div>
