--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -12,7 +12,7 @@
     border          : 1px solid lightgrey;
     background-color: lightgray;
     padding         : 15px;
-    margin          : 15px;
+    margin          : 15px 15px 15px 0px;
 }
 
 .Header {
