--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.html
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
             <mat-form-field [style.width.px]="130" appearance="outline">
                 <mat-label>Batch</mat-label>
-                <mat-select formControlName="searchBatchId" (selectionChange)="ChangeCurrentBatchId($event)">
+                <mat-select formControlName="searchBatchId">
                     <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
                 </mat-select>
             </mat-form-field>
