--- a/src/app/modules/schoolreports/reportboard/reportboard.component.html
+++ b/src/app/modules/schoolreports/reportboard/reportboard.component.html
@@ -1,51 +1,19 @@
 <mat-card>
-    <mat-card-title>Report</mat-card-title>
+    <mat-card-title style="margin:20px">Report</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content>
-        <div style="margin:5px">
-            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
-                <mat-tab *ngFor="let component of components;let indx=index">
-                    <ng-template mat-tab-label>
-                        <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
-                    </ng-template>
-                    <ng-template matTabContent>
-                        <div #container></div>
-                    </ng-template>
-                </mat-tab>
-            </mat-tab-group>
+    <mat-card-content style="margin:20px">
 
-            <!-- <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Exam Time Table
-                    </ng-template>
-                    <app-examtimetable></app-examtimetable>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Exam Results
-                    </ng-template>
-                    <app-results></app-results>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Fee Payment Report
-                    </ng-template>
-                    <app-feecollectionreport></app-feecollectionreport>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Date Wise Collection
-                    </ng-template>
-                    <app-today-collection></app-today-collection>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Issue Certificates
-                    </ng-template>
-                    <app-certificates></app-certificates>
-                </mat-tab>
-            </mat-tab-group> -->
-        </div>
+        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+            <mat-tab *ngFor="let component of components;let indx=index">
+                <ng-template mat-tab-label>
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
+                </ng-template>
+                <ng-template matTabContent>
+                    <div #container></div>
+                </ng-template>
+            </mat-tab>
+        </mat-tab-group>
+
+
     </mat-card-content>
 </mat-card>
