--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -1,8 +1,8 @@
 
 <mat-card>
-    <mat-card-title>Student</mat-card-title>
+    <mat-card-title style="margin:20px">Student</mat-card-title>
     <mat-card-subtitle>{{StudentName}}</mat-card-subtitle>
-    <mat-card-content style="margin:5px;max-height: inherit;">
+    <mat-card-content style="margin:20px">
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
