--- a/src/app/modules/studentexam/examdashboard/examdashboard.component.html
+++ b/src/app/modules/studentexam/examdashboard/examdashboard.component.html
@@ -1,50 +1,16 @@
 <mat-card>
-    <mat-card-title>Examination</mat-card-title>
+    <mat-card-title style="margin:20px">Examination</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content>
-        <div style="margin:5px">
-            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
-                <mat-tab *ngFor="let component of components;let indx=index">
-                    <ng-template mat-tab-label>
-                        <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
-                    </ng-template>
-                    <ng-template matTabContent>
-                        <div #container></div>
-                    </ng-template>
-                </mat-tab>
-            </mat-tab-group>
-            <!-- <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Exams
-                    </ng-template>
-                    <app-exams></app-exams>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Exam Slots
-                    </ng-template>
-                    <app-examslot></app-examslot>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Subjects in Slot
-                    </ng-template>
-                    <app-slotnclasssubject></app-slotnclasssubject>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Student Exam Subject Marks
-                    </ng-template>
-                    <app-examstudentsubjectresult></app-examstudentsubjectresult>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Student Activity
-                    </ng-template>
-                    <app-studentactivity></app-studentactivity>
-                </mat-tab>
-            </mat-tab-group> -->
-        </div>
+    <mat-card-content style="margin:20px">
+        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+            <mat-tab *ngFor="let component of components;let indx=index">
+                <ng-template mat-tab-label>
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
+                </ng-template>
+                <ng-template matTabContent>
+                    <div #container></div>
+                </ng-template>
+            </mat-tab>
+        </mat-tab-group>
     </mat-card-content>
 </mat-card>
